# mcp-mediastack

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  server.py
.github/workflows/: docker-publish.yml
mcp_mediastack/: __main__.py  helpers.py  server.py
mcp_mediastack/tools/: __init__.py  arr_command.py  bazarr.py  overview.py  prowlarr.py  qbittorrent.py  radarr.py  readarr.py  sabnzbd.py  seerr.py  sonarr.py  vpn.py
